# mit-ocw-6-884

./: .gitignore  .gitmodules  Readme.md
dev/: .bazelrc  MODULE.bazel
dev/build_defs/: bsc_compile.bzl  bsc_link.bzl  bsc_simulation.bzl  bsc_sources.bzl  build_defs.bzl  utilities.bzl  yosys_library.bzl
dev/counter/: BUILD.bazel  counter.v
dev/hello_world/: BUILD.bazel  README.md  Top.bs
dev/mergesort/: BUILD.bazel  README.md
dev/mips/: BUILD.bazel  ExecuteStage.bs  FetchStage.bs  Top.bs  Types.bs  mips_cpu.bs  mips_cpu.bsv
projects/: Readme.md
