bazel_dep(name = "rules_cc", version = "0.2.17")

local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

local_repository(
    name = "bsc_local",
    path = "/opt/homebrew/Cellar/bsc/2026.01/",
    build_file_content = """
exports_files(["bin/bsc"])

filegroup(
    name="bsc_runfiles",
    srcs=glob([
        "libexec/lib/Libraries/*"
    ]),
    visibility=["//visibility:public"]
)
""",
)