load("//build_defs:bsc_library.bzl", "bsc_library")
load("//build_defs:yosys_library.bzl", "yosys_library")
# load("@rules_verilog//verilog:defs.bzl", "verilog_library")
# load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")


# cc_library(
#     name = "dpi_c",
#     srcs = ["dpi.c"],
#     hdrs = ["dpi.h"],
# )

# cc_test(
#     name = "dpi_c_test",
#     srcs = ["dpi_test.c"],
#     deps = [":dpi_c"],
# )

# verilog_library(
#     name = "counter",
#     srcs = ["counter.v"],
# )

# verilog_rtl_library(
#     name = "unit_test_top",
#     direct = ["unit_test_top.sv"],
#     deps = [":pkg"],
# )

# verilog_dv_unit_test(
#     name = "test",
#     tags = [
#         "lic_xcelium",
#         "requires_license",
#     ],
#     deps = [":unit_test_top"],
# )