load("//build_defs:bsc_sources.bzl", "bsc_sources")
load("//build_defs:bsc_simulation.bzl", "bsc_simulation")

bsc_sources(
	name = "hello_world_bsc",
	srcs = ["Top.bs"],
	modules = {
		"Top.bs": ["mkTop"]
	}
)

bsc_simulation(
	name = "hello_world_bsc_sim",
	bsc_sources = ":hello_world_bsc",
	module = "mkTop"
)